<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_tools</name>
  <version>1.0.0</version>
  <description>ROS2 package for creating warehouse layouts and pickup scenarios.</description>
  <maintainer email="ziga.breznikar@student.um.si">ziga breznikar</maintainer>
  <license>MIT</license>

  <!--build system dependecies-->
  <buildtool_depend>ament_python</buildtool_depend>

  <!--dependencies needed at runtime-->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pygame</exec_depend>
  <exec_depend>python3-tk</exec_depend>

  <!--testing dependencies-->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
